--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,14 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.64
+minecraft_version=1.18-pre4
+yarn_mappings=1.18-pre4+build.5
 loader_version=0.12.5
 
 # Mod Properties
-mod_version=2.0
+mod_version=2.1
 maven_group=dev.cammiescorner
 archives_base_name=camsbackpacks
 
 # Dependencies
-fabric_version=0.42.1+1.17
-trinkets_version=3.0.4
+fabric_version=0.42.7+1.18
