--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.18-pre4
-yarn_mappings=1.18-pre4+build.5
+minecraft_version=1.18-rc3
+yarn_mappings=1.18-rc3+build.2
 loader_version=0.12.5
 
 # Mod Properties
@@ -12,4 +12,4 @@ maven_group=dev.cammiescorner
 archives_base_name=camsbackpacks
 
 # Dependencies
-fabric_version=0.42.7+1.18
+fabric_version=0.43.1+1.18
