--- a/gradle.properties
+++ b/gradle.properties
@@ -2,12 +2,12 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-minecraft_version=1.18-rc3
-yarn_mappings=1.18-rc3+build.2
-loader_version=0.12.5
+minecraft_version=1.18
+yarn_mappings=1.18+build.1
+loader_version=0.12.6
 
 # Mod Properties
-mod_version=2.2
+mod_version=2.3
 maven_group=dev.cammiescorner
 archives_base_name=camsbackpacks
 
