added universal graves compat

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,9 +7,10 @@ yarn_mappings=1.18+build.1
 loader_version=0.12.6
 
 # Mod Properties
-mod_version=2.4
+mod_version=2.5
 maven_group=dev.cammiescorner
 archives_base_name=camsbackpacks
 
 # Dependencies
-fabric_version=0.43.1+1.18
+fabric_version=0.44.0+1.18
+graves_version=1.2.2+1.18
