--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,18 @@ repositories {
         name = "Ladysnake Libs"
         url = "https://ladysnake.jfrog.io/artifactory/mods"
     }
+
+    maven {
+        name = "Modrinth"
+        url = "https://api.modrinth.com/maven"
+        content {
+            includeGroup "maven.modrinth"
+        }
+    }
+
+    // Universal Graves dependencies go brrrrrrr
+    maven { url 'https://maven.nucleoid.xyz' }
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
 
 dependencies {
@@ -23,6 +35,15 @@ dependencies {
 
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    modImplementation "maven.modrinth:universal-graves:${project.graves_version}"
+
+    // This is all for Universal Graves :despair:
+    modImplementation include("eu.pb4:sgui:1.0.0-rc6+1.18-pre5")
+    modImplementation include("eu.pb4:hologram-api:0.2.1+1.18-pre5")
+    modImplementation include("eu.pb4:placeholder-api:1.1.3+1.17.1")
+    modImplementation include("eu.pb4:polymer:0.2.0-beta.8+1.18")
+    modImplementation include("fr.catcore:server-translations-api:1.4.8+1.18-pre1")
+    modImplementation include("me.lucko:fabric-permissions-api:0.1-SNAPSHOT")
 }
 
 processResources {
