--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,16 @@ repositories {
         }
     }
 
+    maven {
+        name "Cloth Config"
+        url "https://maven.shedaniel.me/"
+    }
+
+    maven {
+        name 'TerraformersMC';
+        url 'https://maven.terraformersmc.com/'
+    }
+
     // Universal Graves dependencies go brrrrrrr
     maven { url 'https://maven.nucleoid.xyz' }
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
@@ -44,6 +54,13 @@ dependencies {
     modImplementation "eu.pb4:polymer:0.2.0-beta.8+1.18"
     modImplementation "fr.catcore:server-translations-api:1.4.8+1.18-pre1"
     modImplementation "me.lucko:fabric-permissions-api:0.1-SNAPSHOT"
+
+    //Cloth Config
+    modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
+        exclude (group: "net.fabricmc.fabric-api") }
+    //Modmenu
+    modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}") {
+        exclude group: "net.fabricmc.fabric-api" }
 }
 
 processResources {
