--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,7 @@ archives_base_name=camsbackpacks
 # Dependencies
 fabric_version=0.44.0+1.18
 graves_version=1.2.2+1.18
+# Cloth Config
+cloth_config_version = 6.1.48
+# ModMenu
+modmenu_version = 3.0.1
