--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '0.10.+'
+    id 'fabric-loom' version '0.12.+'
     id 'maven-publish'
 }
 
@@ -48,11 +48,12 @@ dependencies {
     modImplementation "maven.modrinth:universal-graves:${project.graves_version}"
 
     // This is all for Universal Graves :despair:
-    modImplementation "eu.pb4:sgui:1.0.0-rc6+1.18-pre5"
-    modImplementation "eu.pb4:hologram-api:0.2.1+1.18-pre5"
-    modImplementation "eu.pb4:placeholder-api:1.1.3+1.17.1"
-    modImplementation "eu.pb4:polymer:0.2.0-beta.8+1.18"
-    modImplementation "fr.catcore:server-translations-api:1.4.8+1.18-pre1"
+    modImplementation "eu.pb4:sgui:1.1.1+1.19"
+    modImplementation "eu.pb4:hologram-api:0.2.2+1.19"
+    modImplementation "eu.pb4:placeholder-api:2.0.0-beta.6+1.19"
+    modImplementation "eu.pb4:polymer:0.2.2+1.19"
+    modImplementation "eu.pb4:common-protection-api:1.0.0"
+    modImplementation "fr.catcore:server-translations-api:1.4.16+1.19"
     modImplementation "me.lucko:fabric-permissions-api:0.1-SNAPSHOT"
 
     //Cloth Config
