--- a/build.gradle
+++ b/build.gradle
@@ -7,32 +7,10 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
-    maven {
-        name = "TerraformersMC"
-        url = "https://maven.terraformersmc.com/"
-    }
-    maven {
-        name = "Ladysnake Libs"
-        url = "https://ladysnake.jfrog.io/artifactory/mods"
-    }
-
-    maven {
-        name = "Modrinth"
-        url = "https://api.modrinth.com/maven"
-        content {
-            includeGroup "maven.modrinth"
-        }
-    }
-
-    maven {
-        name "Cloth Config"
-        url "https://maven.shedaniel.me/"
-    }
-
-    maven {
-        name 'TerraformersMC';
-        url 'https://maven.terraformersmc.com/'
-    }
+    maven { url "https://maven.terraformersmc.com/" }
+    maven { url "https://ladysnake.jfrog.io/artifactory/mods" }
+    maven { url "https://api.modrinth.com/maven" }
+    maven { url 'https://maven.terraformersmc.com/' }
 
     // Universal Graves dependencies go brrrrrrr
     maven { url 'https://maven.nucleoid.xyz' }
@@ -46,22 +24,17 @@ dependencies {
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
     modImplementation "maven.modrinth:universal-graves:${project.graves_version}"
+    modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
+    modImplementation "maven.modrinth:midnightlib:${project.midnightlib_version}"
 
     // This is all for Universal Graves :despair:
-    modImplementation "eu.pb4:sgui:1.1.1+1.19"
-    modImplementation "eu.pb4:hologram-api:0.2.2+1.19"
-    modImplementation "eu.pb4:placeholder-api:2.0.0-beta.6+1.19"
-    modImplementation "eu.pb4:polymer:0.2.2+1.19"
+    modImplementation "eu.pb4:sgui:1.2.0+1.19.3"
+    modImplementation "eu.pb4:hologram-api:0.2.3+1.19.3"
+    modImplementation "eu.pb4:placeholder-api:2.0.0-pre.2+1.19.3"
+    modImplementation "eu.pb4:polymer-core:0.3.0-rc.2+1.19.3-rc3"
     modImplementation "eu.pb4:common-protection-api:1.0.0"
-    modImplementation "fr.catcore:server-translations-api:1.4.16+1.19"
+    modImplementation "fr.catcore:server-translations-api:1.4.18+1.19.2"
     modImplementation "me.lucko:fabric-permissions-api:0.1-SNAPSHOT"
-
-    //Cloth Config
-    modApi("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
-        exclude (group: "net.fabricmc.fabric-api") }
-    //Modmenu
-    modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}") {
-        exclude group: "net.fabricmc.fabric-api" }
 }
 
 processResources {
