--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# Fabric Properties
-minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.5
-loader_version=0.14.14
+# Quilt Properties
+minecraft_version=1.20.1
+quilt_mappings=1.20.1+build.23
+loader_version=0.20.2
 
 # Mod Properties
 mod_version=2.14
@@ -12,7 +12,7 @@ maven_group=dev.cammiescorner
 archives_base_name=camsbackpacks
 
 # Dependencies
-fabric_version=0.75.1+1.19.3
-graves_version=2.2.0+1.19.3
-midnightlib_version=1.1.0-fabric
-modmenu_version=5.0.2
+qfapi_version=7.2.2+0.88.1-1.20.1
+graves_version=3.0.0+1.20.1
+midnightlib_version=1.4.1-quilt
+modmenu_version=7.2.2
