--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,11 @@ pluginManagement {
     repositories {
         jcenter()
         maven {
+            name = 'Quilt'
+            url = 'https://maven.quiltmc.org/repository/release'
+        }
+        // Currently needed for Intermediary and other temporary dependencies
+        maven {
             name = 'Fabric'
             url = 'https://maven.fabricmc.net/'
         }
