--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ project.configurations.configureEach {
 
 repositories {
     maven { url "https://maven.terraformersmc.com/" }
-    maven { url "https://ladysnake.jfrog.io/artifactory/mods" }
+    maven { url "https://maven.ladysnake.org/releases" }
     maven { url "https://api.modrinth.com/maven" }
     maven { url 'https://maven.terraformersmc.com/' }
 
