--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,19 @@
 plugins {
-    id 'org.quiltmc.loom' version '1.3.+'
     id 'maven-publish'
+    alias libs.plugins.quilt.loom
 }
 
-version = project.mod_version
-group = project.maven_group
+def ENV = System.getenv()
+def buildTime = ENV.BUILD_TIME ?: new Date().format('yyyyMMddHHmmss')
+
+def javaVersion = 17
+
+group = "dev.cammiescorner"
+archivesBaseName = "camsbackpacks"
+
+boolean isPreviewBuild = !ENV.TAG || ENV.TAG.matches(".+-.+")
+def buildNumber = !ENV.TAG ? ("${ENV.BUILD_NUMBER ? "build.${ENV.BUILD_NUMBER}" : buildTime}-${libs.versions.minecraft.get()}") : ""
+version = (ENV.TAG ?: "development") + ((isPreviewBuild && !ENV.TAG) ? "+${buildNumber}" : "")
 
 // messy workaround for bug in quilt loom 1.3.3
 project.configurations.configureEach {
@@ -12,37 +21,56 @@ project.configurations.configureEach {
     exclude(group: "net.fabricmc.fabric-api")
 }
 
+loom {
+    mods {
+        "camsbackpacks" {
+            // Tell Loom about each source set used by your mod here. This ensures that your mod's classes are properly transformed by Loader.
+            sourceSet("main")
+        }
+    }
+}
+
 repositories {
-    maven { url "https://maven.terraformersmc.com/" }
-    maven { url "https://maven.ladysnake.org/releases" }
-    maven { url "https://api.modrinth.com/maven" }
-    maven { url 'https://maven.terraformersmc.com/' }
+    maven {
+        name = "TerraformersMC"
+        url = "https://maven.terraformersmc.com/releases"
+    }
+    maven {
+        name = "Ladysnake"
+        url = "https://maven.ladysnake.org/releases"
+    }
+    maven {
+        name = "Modrinth"
+        url = "https://api.modrinth.com/maven"
+        content {
+            includeGroup "maven.modrinth"
+        }
+    }
 
     // Universal Graves dependencies go brrrrrrr
-    maven { url 'https://maven.nucleoid.xyz' }
-    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+    maven {
+        name = "Nucleoid"
+        url = "https://maven.nucleoid.xyz"
+    }
 }
 
 dependencies {
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings "org.quiltmc:quilt-mappings:${project.quilt_mappings}:intermediary-v2"
+    minecraft libs.minecraft
+    mappings variantOf(libs.quilt.mappings) { classifier "intermediary-v2" }
 
-    modImplementation "org.quiltmc:quilt-loader:${project.loader_version}"
-    modImplementation "org.quiltmc.quilted-fabric-api:quilted-fabric-api:${project.qfapi_version}"
-    modImplementation "maven.modrinth:universal-graves:${project.graves_version}"
-    modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
-    modImplementation "maven.modrinth:midnightlib:${project.midnightlib_version}"
+    modImplementation libs.quilt.loader
+    modImplementation libs.quilted.fabric.api
+    modRuntimeOnly (libs.quilted.fabric.api.deprecated) {
+        transitive = false
+    }
 
-    // This is all for Universal Graves :despair:
-    modImplementation "eu.pb4:sgui:1.2.2+1.20"
-    modImplementation "eu.pb4:placeholder-api:2.1.3+1.20.1"
-    modImplementation 'eu.pb4:polymer-core:0.5.15+1.20.1'
-    modImplementation 'eu.pb4:polymer-resource-pack:0.5.15+1.20.1'
-    modImplementation 'eu.pb4:polymer-virtual-entity:0.5.15+1.20.1'
-    modImplementation 'eu.pb4:predicate-api:0.2.1+1.20.1'
-    modImplementation "eu.pb4:common-protection-api:1.0.0"
-    modImplementation 'xyz.nucleoid:server-translations-api:2.0.0+1.20'
-    modImplementation "me.lucko:fabric-permissions-api:0.2-SNAPSHOT"
+    modImplementation libs.midnightlib
+
+    modImplementation libs.universalgraves
+    modLocalRuntime libs.bundles.universalgraves.runtime
+
+    modLocalRuntime libs.modmenu
+    modLocalRuntime libs.lazydfu
 }
 
 processResources {
@@ -54,41 +82,49 @@ processResources {
     }
 }
 
-def targetJavaVersion = 17
 tasks.withType(JavaCompile).configureEach {
     it.options.encoding = "UTF-8"
-    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
-        it.options.release = targetJavaVersion
-    }
+    it.options.release.set(javaVersion)
 }
 
 java {
-    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
-    }
-    archivesBaseName = project.archives_base_name
     withSourcesJar()
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(javaVersion)
+        vendor = JvmVendorSpec.MICROSOFT
+    }
 }
 
 jar {
-    from("LICENSE") {
-        rename { "${it}_${project.archivesBaseName}" }
+    from("LICENSE.md") {
+        rename { "LICENSE_${archivesBaseName}.md" }
     }
+
+    manifest.mainAttributes(
+            "Implementation-Title": project.archivesBaseName,
+            "Implementation-Version": project.version,
+            "Maven-Artifact": "${project.group}:${project.archivesBaseName}:${project.version}".toLowerCase(Locale.ROOT),
+            "Built-On-Minecraft": libs.versions.minecraft.get(),
+            "Built-On-Java": "${System.getProperty("java.vm.version")} (${System.getProperty("java.vm.vendor")})"
+    )
 }
 
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            artifact(remapJar) {
-                builtBy remapJar
-            }
-            artifact(sourcesJar) {
-                builtBy remapSourcesJar
-            }
+            from components.java
         }
     }
 
     repositories {
+        if (ENV.MAVEN_UPLOAD_URL) {
+            maven {
+                url = ENV.MAVEN_UPLOAD_URL
+                credentials {
+                    username = ENV.MAVEN_UPLOAD_USERNAME
+                    password = ENV.MAVEN_UPLOAD_PASSWORD
+                }
+            }
+        }
     }
 }
