--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,10 @@ quilt_mappings = "1.20.1+build.23"
 quilt_loader = "0.22.0"
 
 quilted_fabric_api = "7.4.0+0.90.0-1.20.1"
+
+# The latest versions are available at https://parchmentmc.org/docs/getting-started
+parchment = "2023.09.03"
+
 midnightlib = "1.4.1-quilt"
 modmenu = "7.2.2"
 lazydfu = "0.1.3"
@@ -23,6 +27,7 @@ fabric-permissions-api = "0.2-SNAPSHOT"
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
 quilt_mappings = { module = "org.quiltmc:quilt-mappings", version.ref = "quilt_mappings" }
+parchment_mappings = { module = "org.parchmentmc.data:parchment-1.20.1", version.ref = "parchment" }
 quilt_loader = { module = "org.quiltmc:quilt-loader", version.ref = "quilt_loader" }
 
 quilted_fabric_api = { module = "org.quiltmc.quilted-fabric-api:quilted-fabric-api", version.ref = "quilted_fabric_api" }
