--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 pluginManagement {
     repositories {
-        jcenter()
+        gradlePluginPortal()
         maven {
             name = 'Quilt'
             url = 'https://maven.quiltmc.org/repository/release'
@@ -8,8 +8,13 @@ pluginManagement {
         // Currently needed for Intermediary and other temporary dependencies
         maven {
             name = 'Fabric'
-            url = 'https://maven.fabricmc.net/'
+            url = 'https://maven.fabricmc.net'
         }
-        gradlePluginPortal()
     }
 }
+
+plugins {
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.7.0'
+}
+
+rootProject.name = 'Cammies-Wearable-Backpacks'
