--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,8 @@ midnightlib = "1.4.1-quilt"
 modmenu = "7.2.2"
 lazydfu = "0.1.3"
 
+hephaestus = "1.20.1-3.6.3.241"
+
 universalgraves = "3.0.0+1.20.1"
 sgui = "1.2.2+1.20"
 placeholder-api = "2.1.3+1.20.1"
@@ -36,6 +38,8 @@ quilted_fabric_api_deprecated = { module = "org.quiltmc.quilted-fabric-api:quilt
 midnightlib = { module = "maven.modrinth:midnightlib", version.ref = "midnightlib" }
 modmenu = { module = "com.terraformersmc:modmenu", version.ref = "modmenu" }
 lazydfu = { module = "maven.modrinth:lazydfu", version.ref = "lazydfu" }
+
+hephaestus = { module = "maven.modrinth:hephaestus", version.ref = "hephaestus" }
 
 universalgraves = { module = "maven.modrinth:universal-graves", version.ref = "universalgraves" }
 sgui = { module = "eu.pb4:sgui", version.ref = "sgui" }
