--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ modmenu = "7.2.2"
 lazydfu = "0.1.3"
 
 hephaestus = "1.20.1-3.6.3.241"
+inventorio = "4619078"
 
 universalgraves = "3.0.0+1.20.1"
 sgui = "1.2.2+1.20"
@@ -40,6 +41,7 @@ modmenu = { module = "com.terraformersmc:modmenu", version.ref = "modmenu" }
 lazydfu = { module = "maven.modrinth:lazydfu", version.ref = "lazydfu" }
 
 hephaestus = { module = "maven.modrinth:hephaestus", version.ref = "hephaestus" }
+inventorio = { module = "curse.maven:inventorio-491073", version.ref = "inventorio" }
 
 universalgraves = { module = "maven.modrinth:universal-graves", version.ref = "universalgraves" }
 sgui = { module = "eu.pb4:sgui", version.ref = "sgui" }
