--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ mod_description=Just a backpack that lets you carry more items with you. Require
 mod_display_name=Cammie's Wearable Backpacks
 sources_url=https://github.com/Up-Mods/Cammies-Wearable-Backpacks
 issues_url=https://github.com/Up-Mods/Cammies-Wearable-Backpacks/issues
+license_url=https://github.com/Up-Mods/Cammies-Wearable-Backpacks/blob/HEAD/LICENSE.md
 discord_url=https://mods.upcraft.dev/discord
 homepage_url=https://www.curseforge.com/projects/443091
 
