--- a/Quilt/build.gradle
+++ b/Quilt/build.gradle
@@ -8,6 +8,37 @@ project.configurations.configureEach {
     exclude(group: "net.fabricmc.fabric-api")
 }
 
+dependencies {
+    minecraft libs.minecraft
+    mappings(loom.layered {
+        it.parchment("${libs.parchment.mappings.get()}@zip")
+        it.officialMojangMappings()
+    })
+
+    modImplementation quilt.quilt.loader
+    modImplementation quilt.quilted.fabric.api
+    modRuntimeOnly(quilt.quilted.fabric.api.deprecated) {
+        transitive = false
+    }
+
+    compileOnly project(":Common")
+
+    modImplementation libs.resourcefulconfig.fabric
+
+    modCompileOnly quilt.modmenu
+    modLocalRuntime quilt.modmenu
+
+    modCompileOnly quilt.hephaestus
+    modCompileOnly quilt.inventorio
+
+    modImplementation quilt.universalgraves
+    modLocalRuntime(quilt.bundles.universalgraves.runtime) {
+        exclude(group: "io.github.llamalad7")
+    }
+
+    modLocalRuntime quilt.lazydfu
+}
+
 loom {
     mods {
         "${mod_id}" {
@@ -29,6 +60,18 @@ loom {
             setConfigName("Quilt Client")
             ideConfigGenerated(true)
             runDir("run")
+
+            if (rootProject.hasProperty('mc_uuid')) {
+                programArgs("--uuid", rootProject.mc_uuid)
+            }
+
+            if (rootProject.hasProperty('mc_username')) {
+                programArgs("--username", rootProject.mc_username)
+            }
+
+            if (rootProject.hasProperty('mc_java_agent_path')) {
+                vmArg("-javaagent:${rootProject.mc_java_agent_path}")
+            }
         }
 
         server {
@@ -39,37 +82,6 @@ loom {
             runDir("run/server")
         }
     }
-}
-
-dependencies {
-    minecraft libs.minecraft
-    mappings(loom.layered {
-        it.parchment("${libs.parchment.mappings.get()}@zip")
-        it.officialMojangMappings()
-    })
-
-    modImplementation quilt.quilt.loader
-    modImplementation quilt.quilted.fabric.api
-    modRuntimeOnly (quilt.quilted.fabric.api.deprecated) {
-        transitive = false
-    }
-
-    implementation project(":Common")
-
-    modImplementation libs.resourcefulconfig.fabric
-
-    modCompileOnly quilt.modmenu
-    modLocalRuntime quilt.modmenu
-
-    modCompileOnly quilt.hephaestus
-    modCompileOnly quilt.inventorio
-
-    modImplementation quilt.universalgraves
-    modLocalRuntime (quilt.bundles.universalgraves.runtime) {
-        exclude(group: "io.github.llamalad7")
-    }
-
-    modLocalRuntime quilt.lazydfu
 }
 
 tasks.withType(JavaCompile).configureEach {
