finish neo port

--- a/NeoForge/build.gradle
+++ b/NeoForge/build.gradle
@@ -17,6 +17,13 @@ dependencies {
     }
 }
 
+mixin {
+    add(sourceSets.main, "${mod_id}.refmap.json")
+
+    config("${mod_id}.mixins.json")
+    config("${mod_id}.neoforge.mixins.json")
+}
+
 jar {
     archiveClassifier.set("slim")
 }
