--- a/NeoForge/build.gradle
+++ b/NeoForge/build.gradle
@@ -1,27 +1,18 @@
 plugins {
     id 'idea'
     alias neoforge.plugins.neogradle
-    alias neoforge.plugins.mixingradle
 }
 jarJar.enable()
 
 dependencies {
-    minecraft "${neoforge.neoforge.get()}"
+    implementation neoforge.neoforge
     compileOnly project(":Common")
-    annotationProcessor "${libs.mixin.asProvider().get()}:processor"
 
-    implementation fg.deobf(libs.resourcefulconfig.forge.get())
-    minecraftLibrary libs.mixin.extras
+    implementation libs.resourcefulconfig.neoforge
+    implementation libs.mixin.extras
     jarJar(libs.mixin.extras) {
         jarJar.ranged(it, "[${libs.versions.mixin.extras.get()},)")
     }
-}
-
-mixin {
-    add(sourceSets.main, "${mod_id}.refmap.json")
-
-    config("${mod_id}.mixins.json")
-    config("${mod_id}.neoforge.mixins.json")
 }
 
 jar {
@@ -34,72 +25,52 @@ tasks.jarJar.configure {
     finalizedBy 'reobfJarJar'
 }
 
-minecraft {
-    mappings channel: 'official', version: libs.versions.minecraft.get()
+// Automatically enable neoforge AccessTransformers if the file exists
+// This location is hardcoded in FML and can not be changed.
+// https://github.com/neoforged/FancyModLoader/blob/a952595eaaddd571fbc53f43847680b00894e0c1/loader/src/main/java/net/neoforged/fml/loading/moddiscovery/ModFile.java#L118
+if (file('src/main/resources/META-INF/accesstransformer.cfg').exists()) {
+    minecraft.accessTransformers.file file('src/main/resources/META-INF/accesstransformer.cfg')
+}
 
-    copyIdeResources = true //Calls processResources when in dev
+subsystems {
+    parchment {
+        minecraftVersion = libs.versions.minecraft.get()
+        mappingsVersion = libs.versions.parchment.get()
+    }
+}
 
-    // Automatically enable forge AccessTransformers if the file exists
-    // This location is hardcoded in Forge and can not be changed.
-    // https://github.com/MinecraftForge/MinecraftForge/blob/be1698bb1554f9c8fa2f58e32b9ab70bc4385e60/fmlloader/src/main/java/net/minecraftforge/fml/loading/moddiscovery/ModFile.java#L123
-    if (file('src/main/resources/META-INF/accesstransformer.cfg').exists()) {
-        accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+runs {
+    configureEach {
+        systemProperty 'forge.logging.markers', 'REGISTRIES'
+        systemProperty 'forge.logging.console.level', 'debug'
+
+        workingDirectory project.file('run')
+
+        modSource project.sourceSets.main
+    }
+    client {
+        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
+
+        if (rootProject.hasProperty('mc_uuid')) {
+            programArguments.addAll "--uuid", rootProject.mc_uuid
+        }
+
+        if (rootProject.hasProperty('mc_username')) {
+            programArguments.addAll "--username", rootProject.mc_username
+        }
+
+        if (rootProject.hasProperty('mc_java_agent_path')) {
+            jvmArgument("-javaagent:${rootProject.mc_java_agent_path}")
+        }
     }
 
-    runs {
-        configureEach {
-            property 'forge.logging.markers', 'REGISTRIES'
-            property 'forge.logging.console.level', 'debug'
-            property 'mixin.env.remapRefMap', 'true'
-            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
-            args "-mixin.config=${mod_id}.mixins.json", "-mixin.config=${mod_id}.neoforge.mixins.json"
-        }
-        client {
-            workingDirectory project.file('run')
-            ideaModule "${rootProject.name}.${project.name}.main"
-            mods {
-                modClientRun {
-                    source sourceSets.main
-                    source project(":Common").sourceSets.main
-                }
-            }
+    server {
+        programArguments.addAll '--nogui'
+        systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
+    }
 
-            if (rootProject.hasProperty('mc_uuid')) {
-                args("--uuid", rootProject.mc_uuid)
-            }
-
-            if (rootProject.hasProperty('mc_username')) {
-                args("--username", rootProject.mc_username)
-            }
-
-            if (rootProject.hasProperty('mc_java_agent_path')) {
-                jvmArg("-javaagent:${rootProject.mc_java_agent_path}")
-            }
-        }
-
-        server {
-            workingDirectory project.file('run')
-            ideaModule "${rootProject.name}.${project.name}.main"
-            args '--nogui'
-            mods {
-                modServerRun {
-                    source sourceSets.main
-                    source project(":Common").sourceSets.main
-                }
-            }
-        }
-
-        data {
-            workingDirectory project.file('run')
-            ideaModule "${rootProject.name}.${project.name}.main"
-            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
-            mods {
-                modDataRun {
-                    source sourceSets.main
-                    source project(":Common").sourceSets.main
-                }
-            }
-        }
+    data {
+        programArguments.addAll '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
     }
 }
 
