--- a/NeoForge/libs.versions.toml
+++ b/NeoForge/libs.versions.toml
@@ -1,12 +1,10 @@
 [versions]
-neogradle = "6.+"
-mixingradle = "0.7.+"
+neogradle = "7.+"
 
-neoforge = "1.20.1-47.1.85"
+neoforge = "20.2.88"
 
 [libraries]
-neoforge = { module = "net.neoforged:forge", version.ref = "neoforge" }
+neoforge = { module = "net.neoforged:neoforge", version.ref = "neoforge" }
 
 [plugins]
-neogradle = { id = "net.neoforged.gradle", version.ref = "neogradle" }
-mixingradle = { id = "org.spongepowered.mixin", version.ref = "mixingradle" }
+neogradle = { id = "net.neoforged.gradle.userdev", version.ref = "neogradle" }
