--- a/NeoForge/src/main/resources/META-INF/accesstransformer.cfg
+++ b/NeoForge/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,10 +1,10 @@
 # Copied from accesswidener file
 #TODO find a way to automate this
 
-public net.minecraft.client.gui.screens.MenuScreens register(Lnet/minecraft/world/inventory/MenuType;Lnet/minecraft/client/gui/screens/MenuScreens$ScreenConstructor;)V # register
+public net.minecraft.client.gui.screens.MenuScreens register(Lnet/minecraft/world/inventory/MenuType;Lnet/minecraft/client/gui/screens/MenuScreens$ScreenConstructor;)V
 public net.minecraft.world.level.block.entity.BlockEntityType$BlockEntitySupplier
 public net.minecraft.client.gui.screens.MenuScreens$ScreenConstructor
 
-public net.minecraft.world.inventory.InventoryMenu TEXTURE_EMPTY_SLOTS # TEXTURE_EMPTY_SLOTS
-public net.minecraft.world.inventory.InventoryMenu onEquipItem(Lnet/minecraft/world/entity/player/Player;Lnet/minecraft/world/entity/EquipmentSlot;Lnet/minecraft/world/item/ItemStack;Lnet/minecraft/world/item/ItemStack;)V # onEquipItem
-public net.minecraft.world.inventory.CraftingMenu slotChangedCraftingGrid(Lnet/minecraft/world/inventory/AbstractContainerMenu;Lnet/minecraft/world/level/Level;Lnet/minecraft/world/entity/player/Player;Lnet/minecraft/world/inventory/CraftingContainer;Lnet/minecraft/world/inventory/ResultContainer;)V # slotChangedCraftingGrid
+public net.minecraft.world.inventory.InventoryMenu TEXTURE_EMPTY_SLOTS
+public net.minecraft.world.inventory.InventoryMenu onEquipItem(Lnet/minecraft/world/entity/player/Player;Lnet/minecraft/world/entity/EquipmentSlot;Lnet/minecraft/world/item/ItemStack;Lnet/minecraft/world/item/ItemStack;)V
+public net.minecraft.world.inventory.CraftingMenu slotChangedCraftingGrid(Lnet/minecraft/world/inventory/AbstractContainerMenu;Lnet/minecraft/world/level/Level;Lnet/minecraft/world/entity/player/Player;Lnet/minecraft/world/inventory/CraftingContainer;Lnet/minecraft/world/inventory/ResultContainer;)V
