--- a/NeoForge/src/main/resources/META-INF/mods.toml
+++ b/NeoForge/src/main/resources/META-INF/mods.toml
@@ -13,18 +13,17 @@ logoFile = "assets/${mod_id}/icon.png" #optional
 authors = "Cammie, Up" #optional
 description = '''${mod_description}''' #mandatory (Supports multiline text)
 
-[[mixins]]
-config = "${mod_id}.mixins.json"
-
-[[mixins]]
-config = "${mod_id}.neoforge.mixins.json"
+mixins = [
+    { config = "${mod_id}.mixins.json" },
+    { config = "${mod_id}.neoforge.mixins.json" }
+]
 
 # https://docs.neoforged.net/docs/gettingstarted/modfiles#dependency-configurations
 [dependencies]
     "${mod_id}" = [
-        { modId = "neoforge", mandatory = true, versionRange = "*", ordering = "NONE", side = "BOTH", mc-publish = { ignore = true } },
-        { modId = "minecraft", mandatory = true, versionRange = "[${minecraft_version}]", ordering = "NONE", side = "BOTH" },
-        { modId = "resourcefulconfig", mandatory = true, versionRange = "*", ordering = "NONE", side = "BOTH", mc-publish = { curseforge = "714059", modrinth = "M1953qlQ" } },
+        { modId = "neoforge", type = "required", versionRange = "*", ordering = "NONE", side = "BOTH", mc-publish = { ignore = true } },
+        { modId = "minecraft", type = "required", versionRange = "[${minecraft_version}]", ordering = "NONE", side = "BOTH" },
+        { modId = "resourcefulconfig", type = "required", versionRange = "*", ordering = "NONE", side = "BOTH", mc-publish = { curseforge = "714059", modrinth = "M1953qlQ" } },
     ]
 
 # Features are specific properties of the game environment, that you may want to declare you require. This example declares
