--- a/Quilt/build.gradle
+++ b/Quilt/build.gradle
@@ -44,7 +44,6 @@ loom {
         "${mod_id}" {
             // Tell Loom about each source set used by your mod here. This ensures that your mod's classes are properly transformed by Loader.
             sourceSet("main")
-            project(":Common").sourceSets.main
         }
     }
     if (project(":Common").file("src/main/resources/${mod_id}.accesswidener").exists()) {
@@ -88,7 +87,7 @@ tasks.withType(JavaCompile).configureEach {
     source(project(":Common").sourceSets.main.allSource)
 }
 
-tasks.withType(Javadoc).configureEach {
+tasks.named("javadoc", Javadoc).configure {
     source(project(":Common").sourceSets.main.allJava)
 }
 
