--- a/Quilt/libs.versions.toml
+++ b/Quilt/libs.versions.toml
@@ -1,23 +1,23 @@
 [versions]
 # The latest versions are available at https://lambdaurora.dev/tools/import_quilt.html
-quilt_loom = "1.4.+"
+quilt_loom = "1.5.+"
 
-quilt_loader = "0.23.1"
-quilted_fabric_api = "8.0.0-alpha.3+0.91.2-1.20.2"
+quilt_loader = "0.24.0"
+quilted_fabric_api = "9.0.0-alpha.1+local-0.96.4-1.20.4"
 
-modmenu = "8.0.1"
+modmenu = "9.0.0"
 lazydfu = "0.1.3"
 
 hephaestus = "1.20.1-3.6.3.241"
-inventorio = "4619078"
+inventorio = "5134138"
 
-universalgraves = "3.1.1+1.20.2"
-sgui = "1.3.0+1.20.2"
-placeholder-api = "2.2.0+1.20.2"
-polymer = "0.6.0+1.20.2"
+universalgraves = "3.2.1+1.20.3"
+sgui = "1.4.1+1.20.4"
+placeholder-api = "2.3.0+1.20.3"
+polymer = "0.7.5+1.20.4"
 predicate-api = "0.3.0+1.20.2"
 common-protection-api = "1.0.0"
-server-translations-api = "2.0.0+1.20"
+server-translations-api = "2.2.0+1.20.3-rc1"
 fabric-permissions-api = "0.2-SNAPSHOT"
 
 [libraries]
